--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@progress/kendo-theme-default": "^5.4.1",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -22,6 +24,7 @@
     "morgan": "^1.10.0",
     "multiparty": "^4.2.3",
     "node-base64-to-file": "^1.0.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "react-router-dom": "^6.3.0"
   }
 }
